deploy: 4384d428759578428059dc23317c50cdd8c72551

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <div class="content">
       
 <div class="me">
-  <div class="me-image"></div>
+  <div class="me-image">
+    <img src="/images/me-2021.jpg">
+  </div>
   <p>
     Hello, my name is Andreas Mausch, I am a software developer from
     <span class="location">
